--- a/.github/workflows/checker.yml
+++ b/.github/workflows/checker.yml
@@ -3,10 +3,10 @@ name: Code Checker
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   linter:
