--- a/.github/workflows/check_directory_name.yml
+++ b/.github/workflows/check_directory_name.yml
@@ -1,4 +1,4 @@
-name: Check directory name
+name: Check Directory Name
 
 on:
   pull_request:
@@ -12,21 +12,15 @@ on:
 jobs:
   comment:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
-      - name: Create comments on PR
-        run: |
-          cat << EOF > comments
-          @${{ github.event.pull_request.user.login }}
-          ディレクトリ名が正しくない可能性があります．ex1/x_xxxxxxの形であるか確認し，必要であれば修正してください．正しく修正ができた時はこのPRにラベルが付与されます．
-          正しくない例：　ex01/x_xxxxxx，EX1/x_xxxxxxなど
-          EOF
-      - name: Post comments on PR
-        env:
+      - uses: actions/checkout@v3
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          URL: ${{ github.event.pull_request.html_url }}
-        run:
-          gh pr comment -F ./comments "${URL}"
+          message: |
+            @${{ github.event.pull_request.user.login }}
+            ディレクトリ名が正しくない可能性があります．`ex1/x_xxxxxx`の形であるか確認し，必要であれば修正してください．正しく修正ができた時はこのPRにラベルが付与されます．
+            正しくない例：　`ex01/x_xxxxxx`， `EX1/x_xxxxxx`など
       - name: Raise an error
         run: exit 1
