--- a/.github/workflows/first_message.yml
+++ b/.github/workflows/first_message.yml
@@ -21,4 +21,4 @@ jobs:
             課題の提出お疲れ様です！
             レビュアーが自動で割り当てられない場合はお知らせください。
             また、レビュアーが割り振られていても反応がない場合は気づいていない可能性があるので催促してあげてください。
-            コーディングは自動でチェックされるので、エラーメッセージや[こちら](https://qiita.com/Qiita/items/c686397e4a0f4f11683d)を参考に修正してください。
+            コーディングは自動でチェックされるので、エラーメッセージや[こちら](https://github.com/TakedaLab/B4Lecture-2023/blob/master/docs/TIPS.md#github-actionsのciによるコーディングチェック)を参考に修正してください。
