--- a/.github/workflows/first_message.yml
+++ b/.github/workflows/first_message.yml
@@ -1,7 +1,7 @@
 name: First Message
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - master
     types:
@@ -9,6 +9,9 @@ on:
 
 jobs:
   post-message:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
