--- a/.github/workflows/set-pr-reviewers.yml
+++ b/.github/workflows/set-pr-reviewers.yml
@@ -85,6 +85,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
             ${{ env.reviewers_mention }}
-            このPRのレビュアーに指名されました。
-            M1、M2はレビューをして、最後に忘れずapproveをしてください。
-            B4は感想や参考になった点などなんでも良いのでコメントしてください。
+            このPRのレビュアーに指名されました．
+            M1、M2はレビューをして，**最後に忘れずapproveをしてください．**
+            B4は感想や参考になった点などなんでも良いのでコメントしてください．
+            マージはドクターの先輩が行います．
