--- a/ex9/k_ogita/src/config/train.yaml
+++ b/ex9/k_ogita/src/config/train.yaml
@@ -20,7 +20,7 @@ train:
   window: "hann"
   pad_mode: "reflect"
 
-  model: "MLP"
+  model: "CNN"
   feature: "melspc"
   # mfcc settings
   n_mfcc: 20
